--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "moment": "^2.27.0",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "moment": "^2.27.0"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
