--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "highlight.js": "^10.1.2",
+    "lodash": "^4.17.20",
     "marked": "^1.1.1",
     "moment": "^2.27.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/highlight.js": "^9.12.4",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.161",
     "@types/marked": "^1.1.0",
     "@types/moment": "^2.13.0",
     "@vue/cli-plugin-babel": "~4.5.0",
