--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "marked": "^1.1.1",
     "moment": "^2.27.0",
+    "uuid": "^8.3.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
@@ -23,6 +24,7 @@
     "@types/lodash": "^4.14.161",
     "@types/marked": "^1.1.0",
     "@types/moment": "^2.13.0",
+    "@types/uuid": "^8.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
